# duplicati-multimonitor

./: Dockerfile  README.md
app/: Dockerfile  gunicorn.conf.py  manage.py  pyproject.toml
app/duplicati/: admin.py  apps.py  models.py  urls.py  views.py
app/duplicati/migrations/: 0001_initial.py  0002_alter_run_unique_together.py  0003_run_report.py  0004_run_result.py
app/duplicati_multistatus/: asgi.py  settings.py  urls.py  wsgi.py
app/monitoring/: urls.py  urls_ajax.py
app/monitoring/static/monitoring/: monitor.css
app/monitoring/templates/monitoring/: base5.html  data.html  job.html  jobs.html  nav_buttons.html  navbar5.html  runs.html  sidebar.html  status_matrix.html
app/monitoring/templates/monitoring/includes/: run_list.html
app/monitoring/views/: ajax.py  views.py
